--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </label>
         </fieldset>
 
-        <input class="upload-form-hashtags" name="hashtags" placeholder="#хэш-тег" pattern="#[a-z0-9_]*(?![^<]*>)">
+        <input class="upload-form-hashtags" name="hashtags" placeholder="#хэш-тег">
 
         <textarea class="upload-form-description" name="description" placeholder="Ваш комментарий..." maxlength="100" minlength="30" required></textarea>
 
